--- a/plug/manifest.json
+++ b/plug/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "mydlink",
   "name": "MyDlink Smart Plug",
-  "documentation": "https://github.com/yourusername/mydlink",
+  "documentation": "https://github.com/JTechCzech/mydlink-HA-integration/plug",
   "dependencies": [],
-  "codeowners": ["@yourusername"],
+  "codeowners": ["@jtechczech"],
   "requirements": ["websocket-client>=1.2.1", "httpx[http2]"],
   "config_flow": true,
   "iot_class": "cloud_polling",
